@@ -1,0 +1,6 @@
+include "../etc/cyclades-pm8.dev"
+include "../etc/cyclades-pm10.dev"
+device "d0" "pm8" "./cyclades -p pm8|&"
+device "d1" "pm10" "./cyclades -p pm10|&"
+node "t[0-7]"  "d0"
+node "t[8-15]" "d1"
