@@ -1,3 +1,9 @@
+2008-07-27 Jim Garlick <garlick@llnl.gov>
+
+	* etc/cyclades-pm10.dev, etc/cyclades-pm8.dev : Simplified.
+
+	* test/cyclades.c, test/t46 : Add cyclades tests.
+
 2008-07-26 Jim Garlick <garlick@llnl.gov>
 
 	* test/phantom.c, t45 : Add phantom tests.
